# proksee-batch

./: .cookiecutter.json  .darglint  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  noxfile.py  pyproject.toml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
scripts/: update_cgview-js_code.py
src/proksee_batch/: __init__.py  __main__.py  download_example_genbank_files.py  download_example_input.py  genbank_to_cgview_json.py  generate_proksee_link.py  generate_report_html.py  get_stats_from_genbank.py  get_stats_from_seq_file.py  merge_cgview_json_with_template.py  parse_additional_features.py  remove_covered_features.py  scrape_proksee_image.py  seq_file_to_cgview_json.py  sort_tracks.py  update_legend.py  validate_input_data.py
src/proksee_batch/data/: default_proksee_template.json  report.html
src/proksee_batch/data/assets/scripts/: batch.js  cgview.min.js
src/proksee_batch/data/assets/styles/: controls.css  style.css
src/proksee_batch/data/cgview-js_code/docs/scripts/: bootstrap.min.js  controls.js  d3.min.js  general.js  marked.min.js  prism.js  svgcanvas.iife.js
src/proksee_batch/data/cgview-js_code/docs/styles/: bootstrap.min.css  (+3 more)
src/proksee_batch/data/data.example/: table_data.js
src/proksee_batch/data/html_report_code/: batch.js  style.css
tests/: __init__.py  integration_tests.py  test_genbank_to_cgview_json.py  test_main.py  test_parse_additional_features.py  test_remove_covered_features.py  test_seq_file_to_cgview_json.py  test_validate_input_data.py
tests/data/bed/: minimal_example_4.bed
tests/data/blast/: U49845.1.txt  U49845.1_subject1.txt  U49845.1_subject2.txt  U49845.1_v2.txt  run_blast.sh  with_blast_track.json
tests/data/genbank/: minimal_example_1.gbk  minimal_example_2.gbk  minimal_example_3.gbk  minimal_example_5.gbk
tests/data/json/: U49845.1.json
(+10 files in other folders)
